# teal

./: .gitignore  CMakeLists.txt  main.cpp
compiler/: compiler.h  value.h
src/: CMakeLists.txt  main.cpp
src/compiler/: bytecode.cpp  bytecode.h  compiler.cpp  compiler.h
src/syntax/: ast.cpp  ast.h  lexer.cpp  lexer.h  morph.cpp  morph.h  parser.cpp  parser.h
src/vm/: opcode.h  vm.cpp  vm.h
syntax/: ast.cpp  ast.h  lexer.h  parser.cpp
test/: CMakeLists.txt  language_test.cpp  lexer_test.cpp  morph_test.cpp
test/tests/: globals.tl
test/tests/bool/: equality.tl
